--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,7 @@ bookmark.alt.link=Link
 bookmark.alt.description=Descri\u00E7\u00E3o
 
 
-# Concurso
+# Concursos
 menu.concurso=Concursos
 concurso.label=Concurso
 
