Implementação do modelo para Concursos.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,12 +27,12 @@ concurso-update-ok=Concurso atualizado: {0}
 concurso.list.table.title=Lista de Concursos
 
 concurso.label.id=ID
-concurso.label.link=Link
-concurso.label.description=Descri\u00E7\u00E3o
+concurso.label.numero=Numero
+concurso.label.dezenas=Dezenas
 
 concurso.alt.id=ID
-concurso.alt.link=Link
-concurso.alt.description=Descri\u00E7\u00E3o
+concurso.alt.numero=Numero
+concurso.alt.dezenas=Dezenas
 
 
 button.add.new=Incluir Novo
