Implementação de entidades e configuração de persistência com Oracle XE.

--- a/README
+++ b/README
@@ -4,4 +4,7 @@ Loteria
 @rodolfobottossi
 e-mail: rodolfobottossi@gmail.com
 
-Aplicação para gerar apostas para a LOTOFACIL utilizando Demoiselle Framework com a finalidade de auto-estudo.
+Aplicaï¿½ï¿½o para gerar apostas para a LOTOFACIL utilizando Demoiselle Framework com a finalidade de auto-estudo.
+
+
+
