--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,21 @@ bookmark.alt.id=ID
 bookmark.alt.link=Link
 bookmark.alt.description=Descri\u00E7\u00E3o
 
+# Dezenas
+menu.dezena=Dezenas
+dezena.label=Dezenas
+
+dezena-delete-ok=Dezena exclu\u00EDda\: {0}
+dezena-insert-ok=Dezena inserida: {0}
+dezena-update-ok=Dezena atualizada: {0}
+
+dezena.list.table.title=Lista de Dezenas
+
+dezena.label.id=Valor
+
+dezena.alt.id=Valor
+
+
 
 # Concursos
 menu.concurso=Concursos
