Refatoração de entidades e implementação de domínio para resultados.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,20 +1,3 @@
-menu.bookmark=Bookmarks
-bookmark.label=Bookmark
-
-bookmark-delete-ok=Bookmark exclu\u00EDdo\: {0}
-bookmark-insert-ok=Bookmark inserido: {0}
-bookmark-update-ok=Bookmark atualizado: {0}
-
-bookmark.list.table.title=Lista de Links
-
-bookmark.label.id=ID
-bookmark.label.link=Link
-bookmark.label.description=Descri\u00E7\u00E3o
-
-bookmark.alt.id=ID
-bookmark.alt.link=Link
-bookmark.alt.description=Descri\u00E7\u00E3o
-
 # Dezenas
 menu.dezena=Dezenas
 dezena.label=Dezenas
@@ -25,9 +8,9 @@ dezena-update-ok=Dezena atualizada: {0}
 
 dezena.list.table.title=Lista de Dezenas
 
-dezena.label.id=Valor
+dezena.label.id=Dezena
 
-dezena.alt.id=Valor
+dezena.alt.id=Dezena
 
 
 
@@ -50,6 +33,31 @@ concurso.alt.numero=Numero
 concurso.alt.dezenas=Dezenas
 
 
+# Bilhetes
+menu.bilhete=Bilhetes
+bilhete.label=Bilhete
+
+bilhete-delete-ok=Bilhete exclu\u00EDdo\: {0}
+bilhete-insert-ok=Bilhete inserido: {0}
+bilhete-update-ok=Bilhete atualizado: {0}
+
+bilhete.list.table.title=Lista de Bilhetes
+
+bilhete.label.id=ID
+bilhete.label.dezenas=Dezenas
+
+bilhete.alt.id=ID
+bilhete.alt.dezenas=Dezenas
+
+
+# Resultado
+menu.resultado=Resultados
+resultado.label=Resultado
+resultado.list.table.title=Lista de Resultados
+resultado.list.table.total-acertos=Total de Acertos
+resultado.list.table.dezenas-acertadas=Dezenas acertadas
+
+
 button.add.new=Incluir Novo
 button.back=Voltar
 button.delete=Excluir
@@ -66,7 +74,7 @@ label.confirm.delete=Confirma?
 label.date.pattern=dd/MM/yyyy
 
 main.app.title=Bookmarks
-main.app.welcome=Bem-vindo \u00E0 aplica\u00E7\u00E3o de exemplo Bookmark. Este \u00E9 o seu ponto de partida, portanto sinta-se \u00E0 vontade para modificar esta aplica\u00E7\u00E3o.
+main.app.welcome=Bem-vindo \u00E0 aplica\u00E7\u00E3o de exemplo Loterias. Este \u00E9 o seu ponto de partida, portanto sinta-se \u00E0 vontade para modificar esta aplica\u00E7\u00E3o.
 main.change.skin=Mudar Pele
 main.skin=Pele
 main.footer.text=Aplica\u00E7\u00E3o de exemplo do Demoiselle ${parent.version}
